--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,11 @@ spring.graphql.graphiql.enabled=true
 spring.graphql.graphiql.path=/graphiql
 
 
+# Swagger API configuration
+dataservice.openapi.dev-url=http://localhost:9090
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+
+
 
